# clean-rust-api

./: Cargo.toml  README.md  env.dev  env.example
src/: lib.rs  main.rs
src/adapters/api/: mod.rs
src/adapters/api/shared/: mod.rs  routes.rs
src/adapters/api/test/: controllers.rs  mappers.rs  mod.rs  payloads.rs  presenters.rs
src/application/: mod.rs
src/application/mappers/: http_mapper.rs  mod.rs
src/application/repositories/: mod.rs  test_facts_repository_abstract.rs
src/application/usecases/: interfaces.rs  mod.rs  test_facts_usecase.rs
src/application/utils/: error_handling_utils.rs
src/domain/: error.rs  mod.rs  test_fact_entity.rs
src/infrastructure/: mod.rs
