[package]
name = "clean-rust-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
dotenv = "~0.15"
env_logger = "~0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "~1.0"
derive_more = "~0.99"
async-trait = "~0.1"

[dev-dependencies]
cargo-tarpaulin = "~0.20"
uuid = { version = "~1.0", features = ["serde", "v4"] }
mockall = "~0.11"